--- a/dentist/package.json
+++ b/dentist/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dentist",
-	"homepage": ".",
+	"homepage": "https://siangyin.github.io/ReactMiniProj/dentist/build/",
 	"version": "1.0.0",
 	"description": "",
 	"keywords": [],
