--- a/dentist/package.json
+++ b/dentist/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "dentist",
-	"homepage": "https://siangyin.github.io/ReactMiniProj/dentist/build",
+	"homepage": ".",
 	"version": "1.0.0",
 	"description": "",
 	"keywords": [],
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"react": "16.8.6",
 		"react-dom": "16.8.6",
+		"react-router": "^5.2.1",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "3.0.1"
 	},
